[build-system]
requires = [
  "setuptools>=61.0",
  "wheel>=0.36.2",
]
build-backend = "setuptools.build_meta"
[project]
name = "whoscallin"
version = "0.1.0"
authors = [
  { name="Arnav Ghosh", email="arnavghosh.bca.23@sittechno.edu.in" },
]
description = "An Attempt to reverse Engineer Truecaller's WebAPI"
readme = "README.md"
requires-python = ">=3.8" 
keywords = ["api", "callerinfo", "reverse lookup"] 
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", 
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.10.6",
    "pysimdjson>=6.0.2",
    "requests>=2.32.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/whoscallin-py"
"Bug Tracker" = "https://github.com/yourusername/whoscallin-py/issues"

[project.scripts]
whoscallin-cli = "whoscallin"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"whoscallin" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]
